add footer with mail

--- a/CV_html_semaine_2/cv.html
+++ b/CV_html_semaine_2/cv.html
@@ -43,6 +43,9 @@
                 </ul> 
             </article>
         </section>
+        <footer>
+            <p>Mes coordonnées :morphee3301@hotmail.fr</p>
+        </footer>
     </div><!--/content-->		
 </body>
 </html>
